--- a/production/emergenics/emergenics_phase1.ipynb
+++ b/production/emergenics/emergenics_phase1.ipynb
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a5d5ecc9",
    "metadata": {},
    "outputs": [
@@ -2542,7 +2542,48 @@
     "except Exception as e_chi:\n",
     "    print(f\"    Could not estimate from Chi peak: {e_chi}\")\n",
     "\n",
-    "# (Additional refined FSS steps using Optuna or other optimizers would go here...)\n",
+    "# --- Save SBM Key Metrics (Added Block) ---\n",
+    "# Ensure analysis didn't error out and FSS results exist and were successful\n",
+    "if not analysis_error_sbm and 'global_optuna_fss_chi_sbm_results' in globals() and isinstance(global_optuna_fss_chi_sbm_results, dict) and global_optuna_fss_chi_sbm_results.get('success', False):\n",
+    "    # Define path to the metrics file (assuming output_dir and exp_name are defined in the cell)\n",
+    "    key_metrics_path_sbm = os.path.join(output_dir, f\"{exp_name}_key_metrics.json\")\n",
+    "    key_metrics_sbm = {}\n",
+    "    # Load existing metrics first to update, not overwrite\n",
+    "    if os.path.exists(key_metrics_path_sbm):\n",
+    "        try:\n",
+    "            with open(key_metrics_path_sbm, 'r') as f_read_sbm:\n",
+    "                 key_metrics_sbm = json.load(f_read_sbm)\n",
+    "            # Basic validation if loaded data is a dictionary\n",
+    "            if not isinstance(key_metrics_sbm, dict):\n",
+    "                 warnings.warn(f\"Existing key metrics file '{key_metrics_path_sbm}' is not a valid JSON dictionary. Will overwrite if saving proceeds.\", RuntimeWarning)\n",
+    "                 key_metrics_sbm = {}\n",
+    "        except json.JSONDecodeError as e_load_json:\n",
+    "             warnings.warn(f\"Could not decode existing key metrics file '{key_metrics_path_sbm}'. Will overwrite if saving proceeds. Error: {e_load_json}\", RuntimeWarning)\n",
+    "             key_metrics_sbm = {}\n",
+    "        except Exception as e_load_sbm:\n",
+    "             print(f\"  ⚠️ Warning: Could not load key metrics file '{key_metrics_path_sbm}' to update SBM: {e_load_sbm}\");\n",
+    "             key_metrics_sbm = {} # Start fresh if load fails\n",
+    "\n",
+    "    # Add/Update SBM results using .get() for safety\n",
+    "    key_metrics_sbm['final_pc_sbm_chi'] = global_optuna_fss_chi_sbm_results.get('pc', np.nan)\n",
+    "    key_metrics_sbm['final_gamma_sbm_chi'] = global_optuna_fss_chi_sbm_results.get('gamma', np.nan)\n",
+    "    key_metrics_sbm['final_nu_sbm_chi'] = global_optuna_fss_chi_sbm_results.get('nu', np.nan)\n",
+    "    key_metrics_sbm['sbm_chi_fss_success'] = global_optuna_fss_chi_sbm_results.get('success', False)\n",
+    "    key_metrics_sbm['sbm_chi_fss_objective'] = global_optuna_fss_chi_sbm_results.get('objective', np.nan)\n",
+    "\n",
+    "    # Save the updated dictionary\n",
+    "    try:\n",
+    "        # Use the serializer defined earlier in the notebook if available\n",
+    "        serializer_func = globals().get('default_serializer', lambda obj: str(obj))\n",
+    "\n",
+    "        with open(key_metrics_path_sbm, 'w') as f_write_sbm:\n",
+    "            json.dump(key_metrics_sbm, f_write_sbm, indent=4, default=serializer_func)\n",
+    "        print(f\"  ✅ Updated key metrics file with SBM results: {key_metrics_path_sbm}\")\n",
+    "    except Exception as e_save_sbm:\n",
+    "        print(f\"  ⚠️ Error saving updated SBM key metrics: {e_save_sbm}\")\n",
+    "elif not analysis_error_sbm:\n",
+    "     print(\"  Skipping SBM key metrics save (FSS results missing or failed).\")\n",
+    "# --- End Added Block ---\n",
     "\n",
     "# --- Final Reporting ---\n",
     "print(\"\\n✅ Cell 11.1: SBM Analysis completed.\")\n"
@@ -2550,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "07f35ceb",
    "metadata": {},
    "outputs": [
@@ -2824,6 +2865,49 @@
     "        print(f\"    No data for N={largest_N} for χ peak.\")\n",
     "except Exception as e_chi:\n",
     "    print(f\"    Could not estimate from χ peak: {e_chi}\")\n",
+    "\n",
+    "# --- Save RGG Key Metrics (Added Block) ---\n",
+    "# Ensure analysis didn't error out and FSS results exist and were successful\n",
+    "if not analysis_error_rgg and 'global_optuna_fss_chi_rgg_results' in globals() and isinstance(global_optuna_fss_chi_rgg_results, dict) and global_optuna_fss_chi_rgg_results.get('success', False):\n",
+    "    # Define path to the metrics file (assuming output_dir and exp_name are defined in the cell)\n",
+    "    key_metrics_path_rgg = os.path.join(output_dir, f\"{exp_name}_key_metrics.json\")\n",
+    "    key_metrics_rgg = {}\n",
+    "    # Load existing metrics first to update, not overwrite\n",
+    "    if os.path.exists(key_metrics_path_rgg):\n",
+    "        try:\n",
+    "            with open(key_metrics_path_rgg, 'r') as f_read_rgg:\n",
+    "                 key_metrics_rgg = json.load(f_read_rgg)\n",
+    "            # Basic validation if loaded data is a dictionary\n",
+    "            if not isinstance(key_metrics_rgg, dict):\n",
+    "                 warnings.warn(f\"Existing key metrics file '{key_metrics_path_rgg}' is not a valid JSON dictionary. Will overwrite if saving proceeds.\", RuntimeWarning)\n",
+    "                 key_metrics_rgg = {}\n",
+    "        except json.JSONDecodeError as e_load_json:\n",
+    "             warnings.warn(f\"Could not decode existing key metrics file '{key_metrics_path_rgg}'. Will overwrite if saving proceeds. Error: {e_load_json}\", RuntimeWarning)\n",
+    "             key_metrics_rgg = {}\n",
+    "        except Exception as e_load_rgg:\n",
+    "             print(f\"  ⚠️ Warning: Could not load key metrics file '{key_metrics_path_rgg}' to update RGG: {e_load_rgg}\");\n",
+    "             key_metrics_rgg = {} # Start fresh if load fails\n",
+    "\n",
+    "    # Add/Update RGG results using .get() for safety\n",
+    "    key_metrics_rgg['final_pc_rgg_chi'] = global_optuna_fss_chi_rgg_results.get('pc', np.nan)\n",
+    "    key_metrics_rgg['final_gamma_rgg_chi'] = global_optuna_fss_chi_rgg_results.get('gamma', np.nan)\n",
+    "    key_metrics_rgg['final_nu_rgg_chi'] = global_optuna_fss_chi_rgg_results.get('nu', np.nan)\n",
+    "    key_metrics_rgg['rgg_chi_fss_success'] = global_optuna_fss_chi_rgg_results.get('success', False)\n",
+    "    key_metrics_rgg['rgg_chi_fss_objective'] = global_optuna_fss_chi_rgg_results.get('objective', np.nan)\n",
+    "\n",
+    "    # Save the updated dictionary\n",
+    "    try:\n",
+    "        # Use the serializer defined earlier in the notebook if available\n",
+    "        serializer_func = globals().get('default_serializer', lambda obj: str(obj))\n",
+    "\n",
+    "        with open(key_metrics_path_rgg, 'w') as f_write_rgg:\n",
+    "            json.dump(key_metrics_rgg, f_write_rgg, indent=4, default=serializer_func)\n",
+    "        print(f\"  ✅ Updated key metrics file with RGG results: {key_metrics_path_rgg}\")\n",
+    "    except Exception as e_save_rgg:\n",
+    "        print(f\"  ⚠️ Error saving updated RGG key metrics: {e_save_rgg}\")\n",
+    "elif not analysis_error_rgg:\n",
+    "     print(\"  Skipping RGG key metrics save (FSS results missing or failed).\")\n",
+    "# --- End Added Block ---\n",
     "\n",
     "print(\"\\n✅ Cell 11.2: RGG Analysis completed.\")\n"
    ]
