Notebook 2 Markdown Update

--- a/production/emergenics/emergenics_phase1.ipynb
+++ b/production/emergenics/emergenics_phase1.ipynb
@@ -5,7 +5,7 @@
    "id": "d31b3315",
    "metadata": {},
    "source": [
-    "# Emergenics: Phase 1 Notebook: Universality & Scaling"
+    "# Emergenics: Phase 1 Notebook: \"*Topology IS the Control Parameter*\""
    ]
   },
   {
@@ -50,6 +50,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d90cb383",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# What is a Network Automaton?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Basic Definition**\n",
+    "A **Network Automaton (NA)** is a computational system where nodes in a network update their states based on simple local rules and the structure of their connections. Unlike cellular automata, which operate on regular grids, NAs evolve over arbitrary graphs, allowing topology itself to influence behavior.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Formal Definition**\n",
+    "\n",
+    "A **Network Automaton (NA)** is a quadruple:\n",
+    "\n",
+    "**NA = (G, S, R, T)**, where:\n",
+    "\n",
+    "-   **G = (V, E)** is a (possibly weighted or directed) graph with node set **V** and edge set **E** defining the system topology.\n",
+    "-   **S** is the finite or continuous set of possible internal states for each node (e.g., binary, categorical, N-dimensional vectors like the 5D state `[u, v, w, x, y]` used in this project).\n",
+    "-   **R** is a local update rule, often expressed as a function mapping the state of a node and its neighbors to the node's next state, potentially influenced by global parameters **Θ**:\n",
+    "    **R: S × P(S) × Θ → S**\n",
+    "    or more explicitly for node *i*:\n",
+    "    **Sᵢ(t+1) = R(Sᵢ(t), {Sⱼ(t) | j ∈ N(i)}, Θ)**\n",
+    "    where **N(i)** is the neighborhood of node *i* defined by **E**, and **P(S)** represents an aggregation or the set of neighbor states.\n",
+    "-   **T** is the transition mechanism, typically applying **R** synchronously or asynchronously across all nodes in **V** to evolve the system over discrete time steps *t*.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Descriptive Definition**\n",
+    "A **Network Automaton** is like a cellular automaton but built on any kind of network or graph, not just a grid. Each point (node) in the network has a state, and it updates that state based on simple rules considering its own state and the states of its direct connections (neighbors). The key difference is that the specific **pattern of connections**—the network's topology—fundamentally shapes how information flows and what overall behaviors can emerge from the system.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Why Network Automata Matter**\n",
+    "-   They generalize cellular automata to complex network structures.\n",
+    "-   They allow complex, global dynamics and patterns to emerge from simple, local interactions.\n",
+    "-   They serve as powerful models for diverse systems like biological networks (genes, proteins, neurons), social systems, technological networks, and knowledge graphs.\n",
+    "-   They directly embody the principle that network structure actively participates in computation.\n",
+    "-   They provide the foundational model system for studying Emergenics, including phenomena like phase transitions and self-organization controlled by topology.\n",
+    "\n",
+    "---\n",
+    "---\n",
+    "\n",
+    "# What is a Computational Fabric?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Basic Definition (Concise)**\n",
+    "A **Computational Fabric (CF)** is the **dynamic medium** formed by a Network Automaton's specific structure (graph topology), node states, and local rules working in concert. It's the active \"material\" of the system where computation emerges, and the fabric's properties (like its computational capabilities or phase behavior) are directly tuned by the network's structure.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Formal Definition (Extending NA)**\n",
+    "\n",
+    "Given a Network Automaton **NA = (G, S, R, T)**, the **Computational Fabric (CF)** represents the *instantiated system* defined by a specific graph **G** and the resultant dynamics. It is characterized by:\n",
+    "\n",
+    "**CF = (NA, Φ, Ω)**, where:\n",
+    "\n",
+    "-   **NA = (G, S, R, T)** is the underlying Network Automaton definition specifying the components and rules.\n",
+    "-   **Φ** represents the set of **Topological Properties** and **Control Parameters** associated with the *specific* graph G used in the instantiation (e.g., average degree, clustering, modularity; or control parameters like WS rewiring probability *p*, SBM intra-community probability *p_intra*, RGG connection radius *r*). These parameters define the structural context and act as macroscopic knobs tuning the fabric's behavior.\n",
+    "-   **Ω** represents the set of **Emergent Dynamical Properties** and resultant **Computational Capabilities** exhibited by the specific system NA instance defined by G (e.g., observed phase transitions, the structure of the attractor landscape, information processing characteristics, specific values of critical exponents like γ and ν, order parameters like susceptibility χ). These properties (Ω) arise dynamically from the interplay of G, S, R, and T, and their nature is fundamentally dependent on the topological parameters (Φ).\n",
+    "\n",
+    "The CF formalizes the concept that the specific topological configuration (Φ) of a Network Automaton (NA) creates a unique medium that exhibits characteristic emergent computational behaviors (Ω).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Descriptive Definition**\n",
+    "Think of the Network Automaton (nodes, edges, rules) as providing the basic \"recipe\" and ingredients (like yarn type and knitting instructions). The **Computational Fabric** is the specific **sweater** you knit using that recipe with a particular pattern (the network topology). Just as different knitting patterns create sweaters with different textures, elasticity, and warmth (emergent properties), different network topologies create computational fabrics with distinct dynamic behaviors, phase transitions, and ultimately, different computational abilities. The way the network is \"woven\" defines the fabric and what it can compute.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🔹 **Why Computational Fabric Matters (within Emergenics)**\n",
+    "-   It explicitly connects the static **structure (G)** and its **properties (Φ)** to the **dynamic computational behavior (Ω)** that emerges.\n",
+    "-   It reframes computation not as an algorithm running *on* a substrate, but as a behavior *of* the substrate itself.\n",
+    "-   It allows classifying networks based on the *computational properties* of the fabric they create (e.g., WS, SBM, RGG models were shown to form fabrics belonging to distinct universality classes based on their critical exponents).\n",
+    "-   It underpins the goal of **designing computation by engineering structure**: creating specific network topologies (Φ) to instantiate a Computational Fabric with desired emergent properties (Ω).\n",
+    "-   It embodies the core Emergenics principle: **Structure IS Computation**, where the network *is* the computational medium.\n",
+    "\n",
+    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0b96e03",
    "metadata": {},
    "source": [
@@ -70,7 +157,7 @@
     "*   **Sensitivity:** The critical point location (tested on WS) is sensitive to internal rule parameters (e.g., `diffusion_factor`), shifting as expected, but the transition phenomenon remains robust.\n",
     "*   **Framework Validation:** Results strongly support the Emergenics principle that network topology acts as a control parameter, but highlight that the *type* of structure dictates the *specific* critical behavior and universality class.\n",
     "\n",
-    "**Conclusion:** Phase 1 successfully quantified topology-driven phase transitions and provided strong evidence against simple universality, revealing a richer structure-dynamics relationship. The foundation for exploring computational capabilities (Phase 2) is established. Afteryou run this notebook, move on to the Phase 2 notebook."
+    "**Conclusion:** Phase 1 successfully quantified topology-driven phase transitions and provided strong evidence against simple universality, revealing a richer structure-dynamics relationship. The foundation for exploring computational capabilities (Phase 2) is established. "
    ]
   },
   {
